syntax = "proto3";

package narupa.protocol.trajectory;

import "narupa/protocol/array.proto";
import "google/protobuf/struct.proto";

/* A general structure to represent a frame of a trajectory. It is similar in structure to the Google Struct message, representing dynamically typed objects and lists. However, as frame's often consist of large arrays of data of the same type, a set of arrays are also provided as specified in narupa/protocol/array.proto */
message FrameData {

  /* A standard key-value list of dynamically typed data */
  map<string, google.protobuf.Value> values = 1;

  /* A key-value list of value arrays */
  map<string, narupa.protocol.ValueArray> arrays = 2;
}
